upload before a break

--- a/step2.html
+++ b/step2.html
@@ -30,16 +30,16 @@
                 </tr>
                 <tr>
                     <td id="lowleft" class="begone"></td>
-                    <td id="lowmid">MON PC - empty</td>
+                    <td id="lowmid">GRAD PROJET</td>
                     <td id="lowright" class="begone"></td>
                 </tr>
-            </table><a href="https://github.com/Leerlandais/GitGuide"></a>
+            </table>
 
             <div>
                 <p>
                     <ol>
-                        <li>Tout d'abord, allons sur le dépôt GitHub</a></li>
-                        <li>À partir de là, nous devons aller dans "Code" et copier le lien (soit SSH soit HTTPS). Ensuite, ouvrez BASH dans le dossier souhaité et copiez l'intégralité du dépôt. La commande est // git clone https://github.com/Leerlandais/GitGuide.git // Cliquez ici pour voir ce qui se passe quand vous faites cela</li>
+                        <li>Tout d'abord, allons sur le <a href="https://github.com/Leerlandais/GitGuide">dépôt GitHub</a></li>
+                        <li>À partir de là, nous devons aller dans "Code" et copier le lien (soit SSH soit HTTPS). Ensuite, ouvrez BASH dans le dossier souhaité et copiez l'intégralité du dépôt. La commande est // git clone https://github.com/Leerlandais/GitGuide.git // Cliquez <a href="step2.html"> ici</a> pour voir ce qui se passe quand vous faites cela</li>
                         <li>Maintenant que nous avons les fichiers sur notre PC, nous pouvons travailler dessus. Avant cela, nous pourrions aussi ajouter un endroit pour mettre nos fichiers. La commande est // git remote add origin main // Cliquez ici pour voir ce qui se passe quand vous faites cela</li>
                         <li>Avec tout cela fait, nous pouvons maintenant travailler sur les modifications. Dans le Grand Projet, vous avez été chargé des images. Alors ajoutez-les. Cliquez ici pour voir ce qui se passe quand vous faites cela</li>
                         <li>Maintenant que nous avons fait le travail nécessaire, nous devons le téléverser sur git pour qu'il soit accessible aux autres. Pour cela, retournez dans BASH et préparez vos fichiers // git add . // Ce qui se passe ici, c'est que GIT vérifie les différences entre les fichiers sur votre PC et la version Upstream, et signale les changements effectués</li>
