Done. Just needs some style

--- a/step9.html
+++ b/step9.html
@@ -19,9 +19,9 @@
                     <th>test</th>
                 </tr>
                 <tr>
-                    <td id="upleft"></td>
+                    <td id="upleft">GRAND PROJET + Images</td>
                     <td id="upmid" class="begone"></td>
-                    <td id="upright">GRAND PROJET</td>
+                    <td id="upright">GRAND PROJET + Images</td>
                 </tr>
                 <tr>
                     <td id="midleft" class="begone"></td>
@@ -30,7 +30,7 @@
                 </tr>
                 <tr>
                     <td id="lowleft" class="begone"></td>
-                    <td id="lowmid">GRAND PROJET</td>
+                    <td id="lowmid">GRAND PROJET + Images</td>
                     <td id="lowright" class="begone"></td>
                 </tr>
             </table>
