--- a/step2.html
+++ b/step2.html
@@ -30,7 +30,7 @@
                 </tr>
                 <tr>
                     <td id="lowleft" class="begone"></td>
-                    <td id="lowmid">GRAD PROJET</td>
+                    <td id="lowmid">GRAND PROJET</td>
                     <td id="lowright" class="begone"></td>
                 </tr>
             </table>
@@ -40,13 +40,13 @@
                     <ol>
                         <li>Tout d'abord, allons sur le <a href="https://github.com/Leerlandais/GitGuide">dépôt GitHub</a></li>
                         <li>À partir de là, nous devons aller dans "Code" et copier le lien (soit SSH soit HTTPS). Ensuite, ouvrez BASH dans le dossier souhaité et copiez l'intégralité du dépôt. La commande est // git clone https://github.com/Leerlandais/GitGuide.git // Cliquez <a href="step2.html"> ici</a> pour voir ce qui se passe quand vous faites cela</li>
-                        <li>Maintenant que nous avons les fichiers sur notre PC, nous pouvons travailler dessus. Avant cela, nous pourrions aussi ajouter un endroit pour mettre nos fichiers. La commande est // git remote add origin main // Cliquez ici pour voir ce qui se passe quand vous faites cela</li>
-                        <li>Avec tout cela fait, nous pouvons maintenant travailler sur les modifications. Dans le Grand Projet, vous avez été chargé des images. Alors ajoutez-les. Cliquez ici pour voir ce qui se passe quand vous faites cela</li>
+                        <li>Maintenant que nous avons les fichiers sur notre PC, nous pouvons travailler dessus. Avant cela, nous pourrions aussi ajouter un endroit pour mettre nos fichiers. La commande est // git remote add origin main // Cliquez <a href="step3.html"> ici</a> pour voir ce qui se passe quand vous faites cela</li>
+                        <li>Avec tout cela fait, nous pouvons maintenant travailler sur les modifications. Dans le Grand Projet, vous avez été chargé des images. Alors ajoutez-les. Cliquez <a href="step4.html"> ici</a> pour voir ce qui se passe quand vous faites cela</li>
                         <li>Maintenant que nous avons fait le travail nécessaire, nous devons le téléverser sur git pour qu'il soit accessible aux autres. Pour cela, retournez dans BASH et préparez vos fichiers // git add . // Ce qui se passe ici, c'est que GIT vérifie les différences entre les fichiers sur votre PC et la version Upstream, et signale les changements effectués</li>
                         <li>L'étape suivante consiste à préparer les fichiers pour l'envoi, où nous incluons une description des changements. La commande est // git commit -m"Votre message" // Vos modifications sont maintenant prêtes à être envoyées...</li>
-                        <li>...et c'est pourquoi nous avons créé origin. Parce que nous ne possédons pas le Grand Projet, nous devons d'abord l'envoyer à git en utilisant cette commande // git push origin main // Comme d'habitude, cliquez ici pour voir ce qui se passe quand vous faites cela</li>
+                        <li>...et c'est pourquoi nous avons créé origin. Parce que nous ne possédons pas le Grand Projet, nous devons d'abord l'envoyer à git en utilisant cette commande // git push origin main // Comme d'habitude, cliquez <a href="step7.html"> ici</a> pour voir ce qui se passe quand vous faites cela</li>
                         <li>Maintenant que les modifications sont téléversées sur git, nous devons informer le propriétaire du Projet que le travail est terminé. Retournez sur Git et utilisez la Pull Request. Cliquez ici pour voir ce qui se passe quand vous faites cela</li>
-                        <li>Le propriétaire peut maintenant voir vos modifications et les accepter (les fusionner dans le Grand Projet). Cliquez ici pour voir ce qui se passe</li>
+                        <li>Le propriétaire peut maintenant voir vos modifications et les accepter (les fusionner dans le Grand Projet). Cliquez <a href="step9.html"> ici</a> pour voir ce qui se passe</li>
                         <li>Ou il peut les refuser. Cliquez ici pour voir ce qui se passe quand vous faites cela</li>
                     </ol>
                     
