Added page headers

--- a/indexFR.html
+++ b/indexFR.html
@@ -14,9 +14,9 @@
         <p>Let's break down the steps</p>
             <table>
                 <tr>
-                    <th>test</th>
-                    <th>test</th>
-                    <th>test</th>
+                    <th></th>
+                    <th></th>
+                    <th>Upstream</th>
                 </tr>
                 <tr>
                     <td id="upleft" class="tempgone"></td>
