--- a/step4.html
+++ b/step4.html
@@ -8,15 +8,13 @@
 </head>
 <body>
     <h1>Lee's Intro à Git</h1>
-        <p>Welcome to my simple guide to Git based on my own comprehension of how it works. Can't guarantee that everything here will be 100% correct but I'll try my best</p>
-        <p>Step one to understanding Git is to understanding what's going on with each step. For the start of this guide, I'll explain a little of what we covered in class today (21/11/2023)</p>
 
         <p>Let's break down the steps</p>
             <table>
                 <tr>
-                    <th>test</th>
-                    <th>test</th>
-                    <th>test</th>
+                    <th>Origin</th>
+                    <th></th>
+                    <th>Upstream</th>
                 </tr>
                 <tr>
                     <td id="upleft"></td>
@@ -36,6 +34,7 @@
             </table>
 
             <div>
+                <h2>On fait nos changements</h2>
                 <p>
                     <ol>
                         <li>Tout d'abord, allons sur le <a href="https://github.com/Leerlandais/GitGuide">dépôt GitHub</a></li>
