--- a/step8.html
+++ b/step8.html
@@ -9,7 +9,6 @@
 <body>
     <h1>Lee's Intro à Git</h1>
 
-        <p>Let's break down the steps</p>
             <table>
                 <tr>
                     <th>Origin</th>
@@ -18,7 +17,7 @@
                 </tr>
                 <tr>
                     <td id="upleft">GRAND PROJET + Images</td>
-                    <td id="upmid" class="begone"></td>
+                    <td id="upmid">Ça t'interresse?</td>
                     <td id="upright">GRAND PROJET</td>
                 </tr>
                 <tr>
@@ -43,7 +42,7 @@
                         <li>Maintenant que nous avons fait le travail nécessaire, nous devons le téléverser sur git pour qu'il soit accessible aux autres. Pour cela, retournez dans BASH et préparez vos fichiers // git add . // Ce qui se passe ici, c'est que GIT vérifie les différences entre les fichiers sur votre PC et la version Upstream, et signale les changements effectués</li>
                         <li>L'étape suivante consiste à préparer les fichiers pour l'envoi, où nous incluons une description des changements. La commande est // git commit -m"Votre message" // Vos modifications sont maintenant prêtes à être envoyées...</li>
                         <li>...et c'est pourquoi nous avons créé origin. Parce que nous ne possédons pas le Grand Projet, nous devons d'abord l'envoyer à git en utilisant cette commande // git push origin main // Comme d'habitude, cliquez <a href="step7.html"> ici</a> pour voir ce qui se passe quand vous faites cela</li>
-                        <li>Maintenant que les modifications sont téléversées sur git, nous devons informer le propriétaire du Projet que le travail est terminé. Retournez sur Git et utilisez la Pull Request. Cliquez ici pour voir ce qui se passe quand vous faites cela</li>
+                        <li>Maintenant que les modifications sont téléversées sur git, nous devons informer le propriétaire du Projet que le travail est terminé. Retournez sur Git et utilisez la Pull Request. Cliquez <a href="step8.html"> ici</a> pour voir ce qui se passe quand vous faites cela</li>
                         <li>Le propriétaire peut maintenant voir vos modifications et les accepter (les fusionner dans le Grand Projet). Cliquez <a href="step9.html"> ici</a> pour voir ce qui se passe</li>
                         <li>Ou il peut les refuser. Cliquez ici pour voir ce qui se passe quand vous faites cela</li>
                     </ol>
