--- a/indexFR.html
+++ b/indexFR.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lee's Intro à Git</h1>
-            <table>
+            <table><p>test</p>
                 <tr>
                     <th class="begone"></th>
                     <th id="hideOrigin">Origin</th>
